package calculatorMVC.db.fletch;

public class FletchData implements Fletchable{
    @Override
    public String fletchData() {
        return "Данные из базы данных";
    }
}
