package calculatorMVC.db.fletch;

public interface Fletchable {
    // Реализация извлечения данных из базы данных
    String fletchData();
}
