package calculatorMVC.db.save;

public interface Savable {
    // Реализация сохранения данных в базу данных
    void saveData(String data);
}
