package calculatorMVC.view;

public interface IView {
    void runCalculator();
}