package calculatorMVC.view;

public class InputOutputLayer {
    public String getInput() {
        // Чтение ввода пользователя
        return "";
    }

    void displayOutput(String result) {
        // Вывод результата на экран
    }
}