package calculatorMVC.view.input;

public class InputSlice {
    String getInput() {
        // Чтение ввода пользователя
        return "";
    }
}