package calculatorMVC.view.output;

public class OutputSlice {
    void displayOutput(String result) {
        // Вывод результата на экран
    }
}